--- a/demo/index.html
+++ b/demo/index.html
@@ -3,14 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flexible Calendar UI - Demo</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      color: #333;
-      line-height: 1.6;
-    }
+  <title>Flexible Calendar UI - Beautiful React Calendar Component</title>
+  
+  <!-- Meta tags for SEO -->
+  <meta name="description" content="A beautiful, highly customizable React calendar component with multiple views, attendance tracking, and theming options.">
+  <meta name="keywords" content="react calendar, calendar component, attendance tracking, customizable calendar, react">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://flexible-calendar-ui.vercel.app/">
+  <meta property="og:title" content="Flexible Calendar UI - Beautiful React Calendar Component">
+  <meta property="og:description" content="A beautiful, highly customizable React calendar component with multiple views, attendance tracking, and theming options.">
+  <meta property="og:image" content="https://i.ibb.co/K7NbTq2/Calendar-Demo.png">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://flexible-calendar-ui.vercel.app/">
+  <meta property="twitter:title" content="Flexible Calendar UI - Beautiful React Calendar Component">
+  <meta property="twitter:description" content="A beautiful, highly customizable React calendar component with multiple views, attendance tracking, and theming options.">
+  <meta property="twitter:image" content="https://i.ibb.co/K7NbTq2/Calendar-Demo.png">
     .header {
       background: linear-gradient(to right, #0070bf, #00a0e9);
       color: white;
@@ -233,7 +244,7 @@ function App() {
   <footer class="bg-dark text-white text-center py-4">
     <p class="mb-0">© 2025 Flexible Calendar UI. MIT Licensed.</p>
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <div id="root"></div>
+  <script type="module" src="./main.jsx"></script>
 </body>
 </html>
